Option for stdDev or Min-Max as values for error bars added

--- a/applications/plugins/org.csstudio.trends.databrowser2/src/org/csstudio/trends/databrowser2/messages.properties
+++ b/applications/plugins/org.csstudio.trends.databrowser2/src/org/csstudio/trends/databrowser2/messages.properties
@@ -66,6 +66,9 @@ EndTimeLbl=End Time:
 EndTimeTT=Configure the end time.\nUse relative specifications like 'now'\nor absolute date and time like\n2007/01/25 15:00
 Error=Error
 ErrorFmt=Error: {0}
+ErrorTypeTrace=Error Type
+ErrorType_MinMax=Min-Max
+ErrorType_StdDev=StdDev
 Export_Delimiter=\t
 Export_NoValueMarker=#N/A
 ExportBrowse=Browse
